introduce oauth2, api key and basic auth for swagger docu
